[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/dialogue/dialogue_ui.gd" id="1"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -240.0
color = Color(0.08, 0.08, 0.12, 0.92)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -236.0
offset_right = -24.0
offset_bottom = -12.0
theme_override_constants/separation = 8

[node name="PortraitRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="VBox/PortraitRow"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="SpeakerName" type="Label" parent="VBox/PortraitRow"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
text = ""

[node name="DialogueBox" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogueText" type="RichTextLabel" parent="VBox/DialogueBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 72)
bbcode_enabled = true
text = ""
scroll_active = false

[node name="ChoicesBox" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="ContinueHint" type="Label" parent="VBox"]
visible = false
layout_mode = 2
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
text = "[E] / Click to continue"
